# ModularSoftware

./: README.md
implementations/SIKE_orig/: CMakeLists.txt
implementations/SIKE_orig/SIKEp434/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
implementations/SIKE_orig/SIKEp434/SIKEp434/: CTestTestfile.cmake  Makefile  cmake_install.cmake  kat_SIKEp434
implementations/SIKE_orig/SIKEp434/SIKEp503/: CTestTestfile.cmake  Makefile  cmake_install.cmake  kat_SIKEp503
implementations/SIKE_orig/SIKEp434/SIKEp610/: CTestTestfile.cmake  Makefile  cmake_install.cmake  kat_SIKEp610
implementations/SIKE_orig/SIKEp434/SIKEp751/: CTestTestfile.cmake  Makefile  cmake_install.cmake
implementations/SIKE_orig/SIKEp434/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
implementations/SIKE_orig/SIKEp503/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
implementations/SIKE_orig/SIKEp503/SIKEp434/: CTestTestfile.cmake  Makefile  cmake_install.cmake
implementations/SIKE_orig/SIKEp503/SIKEp503/: CTestTestfile.cmake  Makefile  cmake_install.cmake
implementations/SIKE_orig/SIKEp503/SIKEp610/: CTestTestfile.cmake  Makefile  cmake_install.cmake
implementations/SIKE_orig/SIKEp503/SIKEp751/: CTestTestfile.cmake  Makefile  cmake_install.cmake  kat_SIKEp751
implementations/SIKE_orig/SIKEp503/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake  sike_test
implementations/SIKE_orig/include/: sike_params.h
implementations/SIKE_orig/test/: test.c  test_extras.c  test_sike.c  test_sike.h  testing_functions
src/: measurement_functions.c  software  software.c  (+3 more)
(+59 files in other folders)
